Fix build in CI

--- a/CLI11.hpp.in
+++ b/CLI11.hpp.in
@@ -36,13 +36,29 @@
 // Standard combined includes:
 {public_includes}
 
+{slim_windows_h_hpp}
+
 {version_hpp}
 
 {macros_hpp}
 
 {validators_hpp_filesystem}
 
+{encoding_includes}
+
+{encoding_inl_includes}
+
+{argv_inl_includes}
+
 namespace {namespace} {{
+
+{encoding_hpp}
+
+{encoding_inl_hpp}
+
+{argv_hpp}
+
+{argv_inl_hpp}
 
 {string_tools_hpp}
 
