--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -160,9 +160,9 @@ foreach(T IN LISTS CLI11_TESTS)
   if(CLI11_SINGLE_FILE AND CLI11_SINGLE_FILE_TESTS)
     add_executable(${T}_Single ${T}.cpp)
     foreach(COMMON_TEST_SOURCE IN LISTS CLI11_COMMON_TEST_SOURCES)
-      target_sources(${T} PRIVATE ${COMMON_TEST_SOURCE}.cpp)
+      target_sources(${T}_Single PRIVATE ${COMMON_TEST_SOURCE}.cpp)
     endforeach()
-    add_dependent_application_definitions(${T})
+    add_dependent_application_definitions(${T}_Single)
     target_link_libraries(${T}_Single PRIVATE CLI11_SINGLE)
     add_catch_test(${T}_Single)
     set_property(TARGET ${T}_Single PROPERTY FOLDER "Tests Single File")
